--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "data-fixer",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "a tool to check and fix data with schema, inspired by angular reactive form.",
   "author": "t7yang <t7yang@gmail.com>",
   "license": "MIT",
@@ -22,6 +22,7 @@
   "types": "dist/cjs/index.d.ts",
   "module": "dist/esm/index.js",
   "scripts": {
+    "update": "yarn upgradeInteractive",
     "test": "jest",
     "test:coverage": "jest --coverage",
     "test:tsc": "tsc --noEmit",
@@ -35,9 +36,9 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.11",
-    "@types/ramda": "^0.26.5",
-    "jest": "^24.5.0",
-    "ts-jest": "^24.0.1",
-    "typescript": "^3.4.1"
+    "@types/ramda": "^0.26.8",
+    "jest": "^24.7.1",
+    "ts-jest": "^24.0.2",
+    "typescript": "^3.4.4"
   }
 }
