--- a/package.json
+++ b/package.json
@@ -33,13 +33,15 @@
     "build": "npm run clean && npm run build:all"
   },
   "dependencies": {
+    "@types/json-schema": "^7.0.4",
+    "ajv": "^6.10.2",
     "ramda": "^0.26.1"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.22",
-    "@types/ramda": "^0.26.33",
+    "@types/jest": "^24.0.25",
+    "@types/ramda": "^0.26.39",
     "jest": "^24.9.0",
-    "ts-jest": "^24.1.0",
-    "typescript": "^3.7.2"
+    "ts-jest": "^24.3.0",
+    "typescript": "^3.7.4"
   }
 }
