--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   "dependencies": {
     "@types/json-schema": "^7.0.4",
     "ajv": "^6.10.2",
-    "ramda": "^0.26.1"
+    "ramda": "^0.26.1",
+    "ts-toolbelt": "^6.1.6"
   },
   "devDependencies": {
     "@types/jest": "^24.0.25",
