--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,13 +7,12 @@
     "declaration": true,
     "sourceMap": true,
     "rootDir": "./src",
-    "composite": true,
+    "incremental": true,
 
     "strict": true,
 
     /* Module Resolution Options */
     "moduleResolution": "node",
-    "typeRoots": ["node_modules/@types"],
     "esModuleInterop": true
   },
   "include": ["src/**/*.ts"],
