--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "@types/jest": "^25.1.4",
     "@types/ramda": "^0.26.39",
+    "@types/yup": "^0.26.34",
     "jest": "^25.1.0",
     "ts-jest": "^25.2.1",
     "typescript": "^3.7.5"
