test: add yup adapter test for vctrl

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/yup": "^0.26.34",
     "jest": "^25.2.7",
     "ts-jest": "^25.3.1",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "yup": "^0.28.3"
   }
 }
