--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/ramda": "^0.27.3",
     "ajv": "^6.11.0",
     "jest": "^25.2.7",
+    "prettier": "^2.1.2",
     "ts-jest": "^25.3.1",
     "typescript": "^3.7.5",
     "yup": "^0.28.3"
