--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,13 +8,17 @@
     "sourceMap": true,
     "rootDir": "./src",
     "incremental": true,
+    "isolatedModules": true,
 
     "strict": true,
+
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true,
 
     /* Module Resolution Options */
     "moduleResolution": "node",
     "esModuleInterop": true
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "**/*.test.ts"]
+  "exclude": ["**/node_modules", "**/.*/", "**/*.test.ts"]
 }
